objects/Consulta_de_Loja__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <label>Loja</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Loja</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultas de Loja</relationshipLabel>
        <relationshipName>Consultas_de_Loja</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Consultas de Loja</relationshipLabel>
        <relationshipName>Consultas_de_Loja</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <label>Consulta de Loja</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Todas_as_consultas</fullName>
        <columns>NAME</columns>
        <columns>TW1_Loja__c</columns>
        <columns>TW1_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas as consultas</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Consulta de Loja</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultas de Loja</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>